# Auth-Service-TT

./: .env.example  Readme.md  pyproject.toml
migrations/: env.py  seed_data.py
migrations/versions/: d726bad25320_.py
src/: config.py  database.py  main.py
src/admin/: repository.py  router.py
src/auth/: models.py  repository.py  router.py  schemas.py  user_rotuer.py  utils.py
src/task/: models.py  repository.py  router.py  schemas.py
