[project]
name = "authservice"
version = "0.1.0"
description = ""
authors = [
    {name = "bogdanignatenko",email = "nichegons@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi[all] (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "pyjwt (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
